--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
   background-color: #14003f;
   display: flex;
   flex-direction: column;
+  align-items: center;
   flex-grow: 1;
   height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
