--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,9 @@
 .navContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   padding-top: 15;
+  width: 100%;
   background-color: #1b007f;
   height: 54px;
   z-index: 1;
@@ -12,6 +12,10 @@
 .row {
   display: flex;
   flex-direction: row;
+  max-width: 1280px;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .logo {
