--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   flex-grow: 1;
   height: 100vh;
   width: 100vw;
-  z-index: -10000000;
+  overflow: "hidden",
+  z-index: -100;
 }
 
 .App-logo {
