--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   flex-grow: 1;
   height: 100vh;
   width: 100vw;
-  overflow: "hidden",
-  z-index: -100;
+  overflow-x:hidden,
+
 }
 
 .App-logo {
