--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
-  height: 100vh;
+  height: 300vw;
   width: 100vw;
   overflow-x:hidden,
 
