--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,7 +5,7 @@
   padding-top: 15;
   width: 100%;
   background-color: #1b007f;
-  height: 54px;
+  height: 3.75vw;
   z-index: 1;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 }
