--- a/src/components/Design/Footer.css
+++ b/src/components/Design/Footer.css
@@ -1,53 +1,57 @@
-.Todo{
-   width:88.95vw ; 
-   height: 32.77vw;
+.Todo {
+  width: 88.95vw;
+  height: 32.77vw;
   bottom: 1vw;
-   left: 5.55vw;
-   top: 260.06vw;
-   background: #1B007F;
-   z-index: 1888888;
-   position: absolute;
-   border-radius: 1vw;
-   justify-content: center;
-   
+  left: 5.55vw;
+  top: 260.06vw;
+  background: #1b007f;
+  z-index: 1888888;
+  position: absolute;
+  border-radius: 1vw;
+  justify-content: center;
 }
 
-.terminos{
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 23px;
-color: #F5F5F5;
-padding-left: 5%;
+.terminos {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #f5f5f5;
 }
 
-.links{
-  padding: 0vw 1vw;
-}
-.site{
-/* h5 */
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 23px;
-text-align: right;
-color: #CBC0FF;
-padding-right: 10%;
+.links {
+  padding: 0vw 2.5vw;
 }
 
-
-
-.columna{
-    flex:1;
+.site {
+  /* h5 */
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: right;
+  color: #cbc0ff;
 }
-.Logo2{ 
+
+.columna {
+  flex: 1;
+}
+
+.columna1 {
+  font-family: "Roboto";
+  font-size: normal;
+  font-size: 1.3vw;
+  font-weight: 500;
+  color: #f5f5f5;
+  text-align: left;
+}
+
+.Logo2 {
   margin-top: 40%;
-margin-bottom: 10%;
-size: 30%;
-margin-left:  5%;
-padding-left: 10px;
-
- 
+  margin-bottom: 10%;
+  size: 30%;
+  margin-left: 5%;
+  padding-left: 1.5vw;
 }
