--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,10 @@
   background-color: #14003f;
   display: flex;
   flex-direction: column;
-  align-items: center;
   flex-grow: 1;
-  height: 300vw;
   width: 100vw;
-  overflow-x:hidden,
-
+  overflow-x: hidden;
+  position: relative;
 }
 
 .App-logo {
