--- a/src/components/Design/Footer.css
+++ b/src/components/Design/Footer.css
@@ -4,7 +4,7 @@
   bottom: 1vw;
   left: 5.55vw;
   background: #1b007f;
-  z-index: 1888888;
+  z-index: 188;
   border-radius: 1vw;
   justify-content: center;
   align-self: center;
