--- a/src/components/Design/ModalContacto.css
+++ b/src/components/Design/ModalContacto.css
@@ -1,27 +1,90 @@
-.contenedor1{
-    width:41vw ;
-    height:40vw ;
-    background-color: #1B007F; 
-    padding:3.54vw 2.36vw ;
+.contenedor1 {
+  background-color: #1b007f;
+  padding: 2.5vw 2vw 8vw;
+  font-family: Roboto;
+  border-radius: 1vw;
 }
-.contenedor2{
-   
-  
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    
+.contenedor2 {
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
-.input{
-    min-width: 35.28vw;
+.input {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.7vw;
+  line-height: 1.94vw;
+  color: #f5f5f5;
+  min-width: 35.28vw;
+  min-height: 4.44vw;
+  margin: 0.5vw;
+  border-radius: 1vw;
+  background: rgba(203, 192, 255, 0.3);
+  padding-left: 1.5vw;
+  border: 1px solid rgba(198, 192, 255, 0.219);
+}
+.input::placeholder,
+.box::placeholder {
+  color: #cbc0ff;
+}
+.input:focus {
+  outline: none;
+}
+
+.box {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.7vw;
+  color: #f5f5f5;
+  line-height: 1.94vw;
+  min-width: 35.25vw;
+  min-height: 11.8vw;
+  margin: 0.5vw;
+  border-radius: 1vw;
+  background: rgba(203, 192, 255, 0.3);
+  padding-left: 1.5vw;
+  padding-top: 1.2vw;
+  border: 1px solid rgba(198, 192, 255, 0.219);
+}
+.box:focus {
+  outline: none;
+}
+
+.checkBox {
+  height: 1.25vw;
+  width: 1.25vw;
+  border: 1px solid red;
+  cursor: pointer;
+  margin-right: 1vw;
+  background-color: #f5f5f5;
+}
+
+.checkText {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1vw;
+  color: #00ffe0;
+  text-align: left;
+}
+
+.input2 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.7vw;
+    line-height: 1.94vw;
+    color: #f5f5f5;
+    min-width: 18.19vw;
     min-height: 4.44vw;
     margin: 0.5vw;
     border-radius: 1vw;
     background: rgba(203, 192, 255, 0.3);
     padding-left: 1.5vw;
+    border: 1px solid rgba(198, 192, 255, 0.219);
 }
-.box{
-    min-width: 35.25vw;
-    min-height: 11.8vw;
-
+.input2:focus {
+    outline: none;
+}
+.input2::placeholder {
+  color: #cbc0ff;
 }
