--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -10,6 +10,12 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0.6vw;
 }
+
+@media(max-width: 768px){
+.Button {
+    background: #ce2323;
+}}
+  
 .Button:hover {
   background: #00ff66ea;
 }
