--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 .navContainer {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -6,8 +7,14 @@
   width: 100%;
   background-color: #1b007f;
   height: 5vw;
-  z-index: 1;
+  z-index: 10000;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  
+}
+@media (max-width:1000px){
+.navContainer{
+  height: 8vw;
+}
 }
 
 .row {
