--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -20,8 +20,13 @@
   .navContainer{
     height: 18vw;
   }
+  
   }
 
+.logo1 {
+  max-width: 25vw;
+  max-height: 10.3vw;
+}
 .row {
   display: flex;
   flex-direction: row;
@@ -32,7 +37,7 @@
 }
 
 .logo {
-  max-width: 6.46vw;
+  max-width: 6.4vw;
   max-height: 2.36vw;
 }
 
