--- a/src/components/Design/Tarjeta1.css
+++ b/src/components/Design/Tarjeta1.css
@@ -1,7 +1,7 @@
 .tarjeta1 {
   height: 23.06vw;
   width: 20.14vw;
-  border-radius: 1.04vw;
+  border-radius: 15px;
   flex-wrap: wrap;
   background-color: #1b007f;
   z-index: 10;
@@ -15,8 +15,8 @@
 .backImagen {
   width: 100%;
   height: 13.2vw;
-  border-top-left-radius: 1.04vw;
-  border-top-right-radius: 1.04vw;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,4 +42,21 @@
   text-align: left;
   padding-left: 1.5vw;
   max-width: 16.46vw;
+}
+@media(max-width:768px){
+  .tarjeta1{
+  width: 290px ;
+  height: auto;
+  
+  }
+  .text{
+    min-width: 250px;
+    font-size: 14px;
+    text-align: left;
+    padding: 0px 20px 25px 20px;
+  }
+  .title1{
+    font-size:18px ;
+    padding: 10px 20px 0px 20px;
+  }
 }
