--- a/src/components/Design/ModalContacto.css
+++ b/src/components/Design/ModalContacto.css
@@ -94,3 +94,146 @@
 .input2::placeholder {
   color: #cbc0ff;
 }
+
+.botonModalcont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin-top: 20px;
+  padding-top: 1.3vw;
+  padding-bottom: 1.3vw;
+  background: #00ff66;
+  width: 10.97vw;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0.6vw;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1vw;
+  line-height: 1.11vw;
+  text-align: center;
+  color: black;
+  
+}
+
+.botonModalcont:hover {
+  background: #00ff66ea;
+}
+
+@media(max-width: 768px) {
+  .contenedor1 {
+    background-color: #1b007f;
+    padding: 2.5vw 2vw 6vw;
+    font-family: Roboto;
+    border-radius: 1px;
+  }
+  .contenedorC {
+    background-color: #1b007f;
+    padding: 2.5vw 2vw 6vw;
+    font-family: Roboto;
+    border-radius: 20px;
+    width: 85vw;
+  }
+  .contenedor2 {
+    flex: 1;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .input {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.7vw;
+    line-height: 1.94vw;
+    color: #f5f5f5;
+    min-width: 80vw;
+    min-height: 4.44vw;
+    margin: 0.5vw;
+    border-radius: 1vw;
+    background: rgba(203, 192, 255, 0.3);
+    padding-left: 1.5vw;
+    border: 1px solid rgba(198, 192, 255, 0.219);
+  }
+  .input::placeholder,
+  .box::placeholder {
+    color: #cbc0ff;
+  }
+  .input:focus {
+    outline: none;
+  }
+    
+  .checkBox {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    margin-right: 1vw;
+    background-color: #f5f5f5;
+  }
+  
+  .checkText {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    color: #00ffe0;
+    text-align: left;
+  }
+  
+  .input2 {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.7vw;
+      line-height: 1.94vw;
+      color: #f5f5f5;
+      min-width: 18.19vw;
+      min-height: 4.44vw;
+      margin: 0.5vw;
+      border-radius: 1vw;
+      background: rgba(203, 192, 255, 0.3);
+      padding-left: 1.5vw;
+      border: 1px solid rgba(198, 192, 255, 0.219);
+  }
+  .input2:focus {
+      outline: none;
+  }
+  .input2::placeholder {
+    color: #cbc0ff;
+  }
+  .box {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.7vw;
+    color: #f5f5f5;
+    line-height: 1.94vw;
+    min-width: 80vw;
+    min-height: 11.8vw;
+    margin: 0.5vw;
+    border-radius: 1vw;
+    background: rgba(203, 192, 255, 0.3);
+    padding-left: 1.5vw;
+    padding-top: 1.2vw;
+    border: 1px solid rgba(198, 192, 255, 0.219);
+  }
+  
+  .botonModalcont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 20px;
+    padding-top: 1.3vw;
+    padding-bottom: 1.3vw;
+    background: #00ff66;
+    width: 25vw;
+    height: 8vw;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 1.11vw;
+    text-align: center;
+    color: black;
+  }
+}
