--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,35 +2,24 @@
   position: fixed;
   display: flex;
   flex-direction: row;
+  top:0;
+  left: 0;
+  right: 0;
   justify-content: center;
-  padding-top: 15;
-  width: 100%;
+  padding: 5px 20px;
   background-color: #1b007f;
-  height: 5vw;
   z-index: 10000;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-  
 }
-@media (max-width:1000px){
-.navContainer{
-  height: 8vw;
-}
-}
-@media (max-width:768px){
-  .navContainer{
-    height: 18vw;
-  }
-  
-  }
 
 .logo1 {
   max-width: 25vw;
   max-height: 10.3vw;
 }
+
 .row {
   display: flex;
   flex-direction: row;
-  max-width: 75vw;
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
@@ -50,4 +39,16 @@
   font-weight: 40vw;
   font-size:1vw;
   line-height: 1vw;
+}
+
+.mobileLink {
+  text-decoration: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 40vw;
+  font-size:16px;
+}
+
+.menuContainer {
+  width: 100%;
 }
